@@ -408,6 +408,7 @@
             <shortcut key="P">Programmieren einer Diode oder eines FG-FET.</shortcut>
             <shortcut key="D">Beim Ziehen einer rechteckigen Leitung in den Diagonalmodus wechseln.</shortcut>
             <shortcut key="F">Beim Ziehen einer rechteckigen Leitung die Orientierung wechseln.</shortcut>
+            <shortcut key="S">Leitung in zwei Leitungen teilen.</shortcut>
             <shortcut key="ESC">Abbrechen der aktuellen Aktion.</shortcut>
             <shortcut key="Entfernen">Löschen der selektierten Elemente.</shortcut>
             <shortcut key="Rückschritt">Löschen der selektierten Elemente.</shortcut>
